finalsiation processus de requetes